--- a/src/pages/groups/style.css
+++ b/src/pages/groups/style.css
@@ -36,7 +36,7 @@ input:focus {
   background-position: center;
   background-size: cover;
 }
-@media (max-width: 450px) {
+@media (max-width: 1024px) {
   .home {
     background-size: contain;
   }
